--- a/nosotros.html
+++ b/nosotros.html
@@ -95,19 +95,19 @@
             <div class="row">
                 <ul class="links">
                     <li>
-                        <a href="#">Inicio</a>
+                        <a href="index.html">Inicio</a>
                     </li>
                     <li>
-                        <a href="#">Nosotros</a>
+                        <a href="nosotros.html">Nosotros</a>
                     </li>
                     <li>
-                        <a href="#">Cursos</a>
+                        <a href="cursos.html">Cursos</a>
                     </li>
                     <li>
-                        <a href="#">Preguntas</a>
+                        <a href="preguntas.html">Preguntas</a>
                     </li>
                     <li>
-                        <a href="#">Contacto</a>
+                        <a href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
