--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="estiloscss/contact.css">
     <link rel="stylesheet" href="estiloscss/style-footer.css">
     <script src="https://kit.fontawesome.com/9cd7f0d7c6.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="logo.ico">
+    <link rel="icon" href="img/logo.ico">
 
 </head>
 
