--- a/cursos.html
+++ b/cursos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos</title>
     <link rel="stylesheet" href="estiloscss/cursos.css">
-        <link rel="icon" href="logo.ico">
+    <link rel="icon" href="img/logo.ico">
 
 </head>
 <body>
