--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>London academia</title>
     <link rel="stylesheet" href="estiloscss/styles.css"/>
-    <link rel="icon" href="logo.ico">
+    <link rel="icon" href="img/logo.ico">
 </head>
 <body>
     <div class="contenedor">
