--- a/nosotros.html
+++ b/nosotros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nosotros</title>
     <link rel="stylesheet" href="estiloscss/nosotros.css">
-        <link rel="icon" href="logo.ico">
+    <link rel="icon" href="img/logo.ico">
 
 </head>
 <body>
