--- a/preguntas.html
+++ b/preguntas.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQs</title>
-    <link rel="stylesheet" href="estiloscss/preguntas.css">
+    <link rel="icon" href="img/logo.ico">
 </head>
 
 <body>
