--- a/preguntas.html
+++ b/preguntas.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQs</title>
     <link rel="icon" href="img/logo.ico">
+    <link rel="stylesheet" href="estiloscss/preguntas.css">
+    
 </head>
 
 <body>
